--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,22 @@ html {
 
 body {
   background-color: hsl(0, 0%, 0%);
-  color: rgb(98, 162, 2);
+  color: hsl(84, 82%, 52%);
   font-size: 1.5rem;
   font-family: 'Share Tech Mono', monospace;
+}
+
+.app {
+  width: 50%;
+  padding: 2rem;
+  border: 1px dashed hsl(84, 98%, 32%);
+  margin: 0 auto;
+}
+
+.author {
+  color: hsl(0, 0%, 100%);
+}
+
+.engagement {
+  display: block;
 }
