--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ h1 {
 }
 
 .tweet {
+  list-style-type: none;
   border-bottom: 1px dotted hsl(84, 98%, 32%);
   padding: 2rem 0;
 }
@@ -98,6 +99,6 @@ h1 {
   margin-top: 0.5rem;
 }
 
-.tweet:last-of-type {
+li:last-of-type {
   border-bottom: none;
 }
